test/classes/ferguson/delete-free/owned-error-nonclass.chpl
use OwnedObject;

record R {
  var field: int;
}

proc run() {
  var x = new Owned(new R(1));
  writeln(x.borrow());
}

run();
